# rsomics-seq-dist

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  fasta.rs  lib.rs  main.rs  matrix.rs  metric.rs  simd.rs
tests/: compat.rs  smoke.rs
tests/golden/: aligned.fasta  hamming.golden.tsv  jc69.golden.tsv  k2p.golden.tsv
